Add JavaScript passthrough and link file

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,5 +2,5 @@
 layout: base.njk
 title: Hello World
 ---
-
-This template rendered successfully!
+<p>This template rendered successfully!</p>
+<button id="button">Click me!</button>
