--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,6 +7,7 @@
     <title>{{title}}</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
     <link rel="stylesheet" href="./bundle.css">
+    <script src="./js/main.js" defer></script>
 </head>
 <body>
     <header>{{title}}</header>
